--- a/Ex_Proj-1/src/main/resources/application.properties
+++ b/Ex_Proj-1/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.datasource.password=1234
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 mybatis.type-aliases-package=com.proj.demo.model
 
+#server.servlet.session.timeout=5m
+
 ##JPA 설정
 ##실행 쿼리 콘솔 출력 설정
 #spring.jpa.properties.hibernate.show_sql=true
